Menu, language switcher update and homepage layout edit

--- a/ar/hyperhidrosis-facts.html
+++ b/ar/hyperhidrosis-facts.html
@@ -16,7 +16,7 @@
     <title>BEAT THE SWEAT</title>
               <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=755"/>
+    <link rel="stylesheet" href="assets/css/custom.css?v=2.101"/>
   </head>
   <body>
 
@@ -37,7 +37,7 @@
             <li class="nav-item mb-2 mb-lg-0 position-relative">
               <a class="nav-link js-scroll-trigger py-1 btn btn-outline-secondary active" href="ar/hyperhidrosis-facts">حقائــق عـن<br>التعرق الزائد</a>
               <ul class="mega-menu">
-                <li><a class="nav-link border-bottom" href="ar/hyperhidrosis-facts#about">ما هو فرط التعرق؟</a></li>
+                <li><a class="nav-link border-bottom text-secondary" href="ar/hyperhidrosis-facts#about">ما هو فرط التعرق؟</a></li>
                 <li><a class="nav-link border-bottom" href="ar/causes">الأسباب</a></li>
                 <li><a class="nav-link border-bottom" href="ar/diagnosis">التشخيص</a></li>
                 <li><a class="nav-link" href="ar/complications">المضاعفات</a></li>
@@ -74,7 +74,7 @@
                 <div class="">
                   <img src="assets/img/icon/web.svg" alt="Language Icon">
                 </div>
-                <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0 ">EN</a>
+                <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0" href="en/hyperhidrosis-facts">EN</a>
                 <span class="d-inline-block lang-divider"></span>
                 <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary" href="ar">AR</a>
               </div>
@@ -97,7 +97,7 @@
             <div class="">
               <img src="assets/img/icon/web.svg" alt="Language Icon">
             </div>
-            <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0 ">EN</a>
+            <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0 " href="en/hyperhidrosis-facts">EN</a>
             <span class="d-inline-block lang-divider"></span>
             <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary" href="ar">AR</a>
           </div>
