--- a/ar/index.html
+++ b/ar/index.html
@@ -16,7 +16,7 @@
     <title>BEAT THE SWEAT</title>
               <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=22523"/>
+    <link rel="stylesheet" href="assets/css/custom.css?v=2.101"/>
   </head>
   <body>
 
@@ -35,7 +35,7 @@
         <div class="main-menu">
           <ul class="nav flex-column flex-lg-row position-relative justify-content-start align-items-start align-items-lg-center py-2">
             <li class="nav-item mb-2 mb-lg-0 position-relative">
-              <a class="nav-link js-scroll-trigger py-1 btn btn-outline-secondary active" href="ar/hyperhidrosis-facts">حقائــق عـن<br>التعرق الزائد</a>
+              <a class="nav-link js-scroll-trigger py-1" href="ar/hyperhidrosis-facts">حقائــق عـن<br>التعرق الزائد</a>
               <ul class="mega-menu">
                 <li><a class="nav-link border-bottom" href="ar/hyperhidrosis-facts#about">ما هو فرط التعرق؟</a></li>
                 <li><a class="nav-link border-bottom" href="ar/causes">الأسباب</a></li>
@@ -74,9 +74,9 @@
                 <div class="">
                   <img src="assets/img/icon/web.svg" alt="Language Icon">
                 </div>
-                <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0 ">EN</a>
+                <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0" href="en">EN</a>
                 <span class="d-inline-block lang-divider"></span>
-                <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary" href="ar">AR</a>
+                <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary">AR</a>
               </div>
             </div>
           </div>
@@ -85,21 +85,21 @@
       <div class="d-none d-lg-flex align-items-end justify-content-end col-2">
 
         <ul class="list-unstyled d-flex social-navbar mb-0">
-  <li class="mx-1"><a href="#"><img src="assets/img/social/fb.svg" alt="Facebook"></a></li>
-  <li class="mx-1"><a href="#"><img src="assets/img/social/instagram.svg" alt="Instagram"></a></li>
-  <li class="mx-1"><a href="#"><img src="assets/img/social/tiktok.svg" alt="Tiktok"></a></li>
-  <li class="mx-1"><a href="#"><img src="assets/img/social/youtube.svg" alt="Youtube"></a></li>
-  <li class="mx-1"><a href="#"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
-</ul>
+          <li class="mx-1"><a href="#"><img src="assets/img/social/fb.svg" alt="Facebook"></a></li>
+          <li class="mx-1"><a href="#"><img src="assets/img/social/instagram.svg" alt="Instagram"></a></li>
+          <li class="mx-1"><a href="#"><img src="assets/img/social/tiktok.svg" alt="Tiktok"></a></li>
+          <li class="mx-1"><a href="#"><img src="assets/img/social/youtube.svg" alt="Youtube"></a></li>
+          <li class="mx-1"><a href="#"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
+        </ul>
 
         <div class="language-switcher ps-3">
           <div class="d-flex align-items-center justify-content-center">
             <div class="">
               <img src="assets/img/icon/web.svg" alt="Language Icon">
             </div>
-            <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0 ">EN</a>
+            <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0" href="en">EN</a>
             <span class="d-inline-block lang-divider"></span>
-            <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary" href="ar">AR</a>
+            <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary">AR</a>
           </div>
         </div>
 
@@ -133,7 +133,7 @@
     </div>
 
   </div>
-  <a class="arrow-down-animate js-scroll-trigger" href="ar#visual">
+  <a class="arrow-down-animate js-scroll-trigger-same-page" href="#visual">
     <img src="assets/img/icon/arrow-down-dark.svg" alt="icon">
   </a>
 </div>
@@ -144,9 +144,9 @@
   <div class="container-fluid">
     <div class="row d-flex align-items-center justify-content-center">
       <div class="col-10 col-md-8 col-xxl-6 text-center">
-        <img class="w-100" src="assets/img/logo/beat-the-sweat-text-visual.svg" alt="BEAT THE SWEAT" />
+        <img class="w-100" src="assets/img/logo/beat-the-sweat-text-visual-ar.svg" alt="BEAT THE SWEAT" />
         <div class="text-typing-block">
-          <p class="font-en text-white pt-2 h2 text-tagline text-typed text-center" data-text="الصورة الكاملة أحلى"></p>
+          <p class="font-en text-white pt-2 text-tagline text-typed text-center" data-text="الصورة الكاملة أحلى"></p>
         </div>
       </div>
     </div>
