--- a/en/diagnosis.html
+++ b/en/diagnosis.html
@@ -16,7 +16,7 @@
     <title>BEAT THE SWEAT</title>
               <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=13511"/>
+    <link rel="stylesheet" href="assets/css/custom.css?v=2.101"/>
   </head>
   <body>
 
@@ -39,7 +39,7 @@
               <ul class="mega-menu">
                 <li><a class="nav-link border-bottom" href="en/hyperhidrosis-facts#about">What is hyperhidrosis?</a></li>
                 <li><a class="nav-link border-bottom" href="en/causes">Causes</a></li>
-                <li><a class="nav-link border-bottom" href="en/diagnosis">Diagnosis</a></li>
+                <li><a class="nav-link border-bottom text-secondary" href="en/diagnosis">Diagnosis</a></li>
                 <li><a class="nav-link" href="en/complications">Complications</a></li>
               </ul>
             </li>
@@ -76,7 +76,7 @@
                 </div>
                 <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0 text-secondary">EN</a>
                 <span class="d-inline-block lang-divider"></span>
-                <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 " href="ar">AR</a>
+                <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0" href="ar/diagnosis">AR</a>
               </div>
             </div>
           </div>
@@ -99,7 +99,7 @@
             </div>
             <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0 text-secondary">EN</a>
             <span class="d-inline-block lang-divider"></span>
-            <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 " href="ar">AR</a>
+            <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0" href="ar/diagnosis">AR</a>
           </div>
         </div>
 
