--- a/en/download-brochure.html
+++ b/en/download-brochure.html
@@ -16,7 +16,7 @@
     <title>BEAT THE SWEAT</title>
               <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=9574"/>
+    <link rel="stylesheet" href="assets/css/custom.css?v=2.101"/>
   </head>
   <body>
 
@@ -35,7 +35,7 @@
         <div class="main-menu">
           <ul class="nav flex-column flex-lg-row position-relative justify-content-start align-items-start align-items-lg-center py-2">
             <li class="nav-item mb-2 mb-lg-0 position-relative">
-              <a class="nav-link js-scroll-trigger py-1 btn btn-outline-secondary active" href="en/hyperhidrosis-facts">HYPERHIDROSIS FACTS</a>
+              <a class="nav-link js-scroll-trigger py-1" href="en/hyperhidrosis-facts">HYPERHIDROSIS FACTS</a>
               <ul class="mega-menu">
                 <li><a class="nav-link border-bottom" href="en/hyperhidrosis-facts#about">What is hyperhidrosis?</a></li>
                 <li><a class="nav-link border-bottom" href="en/causes">Causes</a></li>
@@ -56,7 +56,7 @@
               <a class="nav-link js-scroll-trigger py-1 hover-line" href="en/faqs">FAQs</a>
             </li>
             <li class="nav-item mb-2 mb-lg-0 position-relative">
-              <a class="ms-2 ms-lg-0 js-scroll-trigger btn btn-outline-light fw-bold" href="en/download-brochure">Download The Brochure</a>
+              <a class="ms-2 ms-lg-0 js-scroll-trigger btn btn-outline-light active fw-bold" href="en/download-brochure">Download The Brochure</a>
             </li>
           </ul>
           <div class="d-flex flex-column d-lg-none col-12 pt-3">
@@ -76,7 +76,7 @@
                 </div>
                 <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0 text-secondary">EN</a>
                 <span class="d-inline-block lang-divider"></span>
-                <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 " href="ar">AR</a>
+                <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0" href="ar/download-brochure">AR</a>
               </div>
             </div>
           </div>
@@ -99,7 +99,7 @@
             </div>
             <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0 text-secondary">EN</a>
             <span class="d-inline-block lang-divider"></span>
-            <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 " href="ar">AR</a>
+            <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0" href="ar/download-brochure">AR</a>
           </div>
         </div>
 
