--- a/ar/diagnosis.html
+++ b/ar/diagnosis.html
@@ -16,7 +16,7 @@
     <title>BEAT THE SWEAT</title>
               <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=28425"/>
+    <link rel="stylesheet" href="assets/css/custom.css?v=2.101"/>
   </head>
   <body>
 
@@ -39,7 +39,7 @@
               <ul class="mega-menu">
                 <li><a class="nav-link border-bottom" href="ar/hyperhidrosis-facts#about">ما هو فرط التعرق؟</a></li>
                 <li><a class="nav-link border-bottom" href="ar/causes">الأسباب</a></li>
-                <li><a class="nav-link border-bottom" href="ar/diagnosis">التشخيص</a></li>
+                <li><a class="nav-link border-bottom text-secondary" href="ar/diagnosis">التشخيص</a></li>
                 <li><a class="nav-link" href="ar/complications">المضاعفات</a></li>
               </ul>
             </li>
@@ -74,9 +74,9 @@
                 <div class="">
                   <img src="assets/img/icon/web.svg" alt="Language Icon">
                 </div>
-                <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0 ">EN</a>
+                <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0" href="en/diagnosis">EN</a>
                 <span class="d-inline-block lang-divider"></span>
-                <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary" href="ar">AR</a>
+                <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary">AR</a>
               </div>
             </div>
           </div>
@@ -97,9 +97,9 @@
             <div class="">
               <img src="assets/img/icon/web.svg" alt="Language Icon">
             </div>
-            <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0 ">EN</a>
+            <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0" href="en/diagnosis">EN</a>
             <span class="d-inline-block lang-divider"></span>
-            <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary" href="ar">AR</a>
+            <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary">AR</a>
           </div>
         </div>
 
