--- a/ar/how-to-treat.html
+++ b/ar/how-to-treat.html
@@ -16,7 +16,7 @@
     <title>BEAT THE SWEAT</title>
               <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=16527"/>
+    <link rel="stylesheet" href="assets/css/custom.css?v=2.101"/>
   </head>
   <body>
 
@@ -35,7 +35,7 @@
         <div class="main-menu">
           <ul class="nav flex-column flex-lg-row position-relative justify-content-start align-items-start align-items-lg-center py-2">
             <li class="nav-item mb-2 mb-lg-0 position-relative">
-              <a class="nav-link js-scroll-trigger py-1 btn btn-outline-secondary active" href="ar/hyperhidrosis-facts">حقائــق عـن<br>التعرق الزائد</a>
+              <a class="nav-link js-scroll-trigger py-1" href="ar/hyperhidrosis-facts">حقائــق عـن<br>التعرق الزائد</a>
               <ul class="mega-menu">
                 <li><a class="nav-link border-bottom" href="ar/hyperhidrosis-facts#about">ما هو فرط التعرق؟</a></li>
                 <li><a class="nav-link border-bottom" href="ar/causes">الأسباب</a></li>
@@ -44,9 +44,9 @@
               </ul>
             </li>
             <li class="nav-item mb-2 mb-lg-0 position-relative">
-              <a class="nav-link js-scroll-trigger py-1" href="ar/how-to-treat">كيفــــــــية<br>العــــــــلاج</a>
+              <a class="nav-link js-scroll-trigger py-1 btn btn-outline-secondary active" href="ar/how-to-treat">كيفــــــــية<br>العــــــــلاج</a>
               <ul class="mega-menu">
-                <li><a class="nav-link border-bottom" href="ar/how-to-treat#treatment_options">شدة المرض وخيارات العلاج</a></li>
+                <li><a class="nav-link border-bottom text-secondary" href="ar/how-to-treat#treatment_options">شدة المرض وخيارات العلاج</a></li>
                 <li><a class="nav-link border-bottom" href="ar/botulinum-toxin-injections">حقن توكسين البوتولينوم.</a></li>
                 <li><a class="nav-link border-bottom" href="ar/surgical-other-procedures">العمليات الجراحية والإجراءات الأخرى</a></li>
                 <li><a class="nav-link" href="ar/lifestyle-tips">تعديلات فى أسلوب الحياة</a></li>
@@ -74,9 +74,9 @@
                 <div class="">
                   <img src="assets/img/icon/web.svg" alt="Language Icon">
                 </div>
-                <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0 ">EN</a>
+                <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0" href="en/how-to-treat">EN</a>
                 <span class="d-inline-block lang-divider"></span>
-                <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary" href="ar">AR</a>
+                <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary">AR</a>
               </div>
             </div>
           </div>
@@ -97,9 +97,9 @@
             <div class="">
               <img src="assets/img/icon/web.svg" alt="Language Icon">
             </div>
-            <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0 ">EN</a>
+            <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0" href="en/how-to-treat">EN</a>
             <span class="d-inline-block lang-divider"></span>
-            <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary" href="ar">AR</a>
+            <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 text-secondary">AR</a>
           </div>
         </div>
 
