--- a/en/hyperhidrosis-facts.html
+++ b/en/hyperhidrosis-facts.html
@@ -16,7 +16,7 @@
     <title>BEAT THE SWEAT</title>
               <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=14725"/>
+    <link rel="stylesheet" href="assets/css/custom.css?v=2.101"/>
   </head>
   <body>
 
@@ -76,7 +76,7 @@
                 </div>
                 <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0 text-secondary">EN</a>
                 <span class="d-inline-block lang-divider"></span>
-                <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 " href="ar">AR</a>
+                <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 " href="ar/hyperhidrosis-facts">AR</a>
               </div>
             </div>
           </div>
@@ -99,7 +99,7 @@
             </div>
             <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0 text-secondary">EN</a>
             <span class="d-inline-block lang-divider"></span>
-            <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 " href="ar">AR</a>
+            <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 " href="ar/hyperhidrosis-facts">AR</a>
           </div>
         </div>
 
