--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>BEAT THE SWEAT</title>
               <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=28174"/>
+    <link rel="stylesheet" href="assets/css/custom.css?v=2.101"/>
   </head>
   <body>
 
@@ -35,7 +35,7 @@
         <div class="main-menu">
           <ul class="nav flex-column flex-lg-row position-relative justify-content-start align-items-start align-items-lg-center py-2">
             <li class="nav-item mb-2 mb-lg-0 position-relative">
-              <a class="nav-link js-scroll-trigger py-1 btn btn-outline-secondary active" href="en/hyperhidrosis-facts">HYPERHIDROSIS FACTS</a>
+              <a class="nav-link js-scroll-trigger py-1" href="en/hyperhidrosis-facts">HYPERHIDROSIS FACTS</a>
               <ul class="mega-menu">
                 <li><a class="nav-link border-bottom" href="en/hyperhidrosis-facts#about">What is hyperhidrosis?</a></li>
                 <li><a class="nav-link border-bottom" href="en/causes">Causes</a></li>
@@ -133,7 +133,7 @@
     </div>
 
   </div>
-  <a class="arrow-down-animate js-scroll-trigger" href="en#visual">
+  <a class="arrow-down-animate js-scroll-trigger-same-page" href="#visual">
     <img src="assets/img/icon/arrow-down-dark.svg" alt="icon">
   </a>
 </div>
