--- a/en/faqs.html
+++ b/en/faqs.html
@@ -122,7 +122,7 @@
   <div class="container-fluid">
     <div class="row d-flex align-items-center justify-content-center">
       <div class="col-10 col-md-8 col-xxl-6 text-center">
-        <img class="w-100" src="assets/img/logo/bts-b.svg" alt="BEAT THE SWEAT" />
+        <img class="w-100" src="assets/img/logo/beat-the-sweat-text-visual.svg" alt="BEAT THE SWEAT" />
         <div class="text-typing-block">
           <p class="font-en pt-2 h2 text-tagline text-typed text-center" data-text="Don't Crop, Treat."></p>
         </div>
