Meta Title Update

--- a/en/surgical-other-procedures.html
+++ b/en/surgical-other-procedures.html
@@ -13,7 +13,7 @@
     <meta name="application-name" content="BEAT THE SWEAT">
     <link rel="canonical" href="/"/>
 
-    <title>BEAT THE SWEAT</title>
+    <title>BEAT THE SWEAT - Surgical & Other Procedures</title>
               <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="assets/css/custom.css?v=2.101"/>
