--- a/en/surgical-other-procedures.html
+++ b/en/surgical-other-procedures.html
@@ -62,11 +62,11 @@
           <div class="d-flex flex-column d-lg-none col-12 pt-3">
             <div class="ps-2">
               <ul class="list-unstyled d-flex social-navbar mb-0">
-  <li class="mx-1"><a href="#"><img src="assets/img/social/fb.svg" alt="Facebook"></a></li>
-  <li class="mx-1"><a href="#"><img src="assets/img/social/instagram.svg" alt="Instagram"></a></li>
-  <li class="mx-1"><a href="#"><img src="assets/img/social/tiktok.svg" alt="Tiktok"></a></li>
-  <li class="mx-1"><a href="#"><img src="assets/img/social/youtube.svg" alt="Youtube"></a></li>
-  <li class="mx-1"><a href="#"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
+  <li class="mx-1"><a href="https://www.facebook.com/BTS.MEA" target="_blank"><img src="assets/img/social/fb.svg" alt="Facebook"></a></li>
+  <li class="mx-1"><a href="https://www.instagram.com/beatthesweat.mea/" target="_blank"><img src="assets/img/social/instagram.svg" alt="Instagram"></a></li>
+  <li class="mx-1"><a href="https://www.tiktok.com/@beatthesweat.mea" target="_blank"><img src="assets/img/social/tiktok.svg" alt="Tiktok"></a></li>
+  <li class="mx-1"><a href="https://www.youtube.com/@Beatthesweat-MEA" target="_blank"><img src="assets/img/social/youtube.svg" alt="Youtube"></a></li>
+  <li class="mx-1"><a href="https://www.snapchat.com/add/beatthesweatmea" target="_blank"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
 </ul>
             </div>
             <div class="language-switcher ps-3 pt-3">
@@ -85,11 +85,11 @@
       <div class="d-none d-lg-flex align-items-end justify-content-end col-2">
 
         <ul class="list-unstyled d-flex social-navbar mb-0">
-  <li class="mx-1"><a href="#"><img src="assets/img/social/fb.svg" alt="Facebook"></a></li>
-  <li class="mx-1"><a href="#"><img src="assets/img/social/instagram.svg" alt="Instagram"></a></li>
-  <li class="mx-1"><a href="#"><img src="assets/img/social/tiktok.svg" alt="Tiktok"></a></li>
-  <li class="mx-1"><a href="#"><img src="assets/img/social/youtube.svg" alt="Youtube"></a></li>
-  <li class="mx-1"><a href="#"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
+  <li class="mx-1"><a href="https://www.facebook.com/BTS.MEA" target="_blank"><img src="assets/img/social/fb.svg" alt="Facebook"></a></li>
+  <li class="mx-1"><a href="https://www.instagram.com/beatthesweat.mea/" target="_blank"><img src="assets/img/social/instagram.svg" alt="Instagram"></a></li>
+  <li class="mx-1"><a href="https://www.tiktok.com/@beatthesweat.mea" target="_blank"><img src="assets/img/social/tiktok.svg" alt="Tiktok"></a></li>
+  <li class="mx-1"><a href="https://www.youtube.com/@Beatthesweat-MEA" target="_blank"><img src="assets/img/social/youtube.svg" alt="Youtube"></a></li>
+  <li class="mx-1"><a href="https://www.snapchat.com/add/beatthesweatmea" target="_blank"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
 </ul>
 
         <div class="language-switcher ps-3">
@@ -243,11 +243,11 @@
         <div class="d-flex align-items-center pb-2">
           <span class="text-white">Follow Us:</span>
           <ul class="list-unstyled d-flex social-navbar mb-0">
-  <li class="mx-1"><a href="#"><img src="assets/img/social/fb.svg" alt="Facebook"></a></li>
-  <li class="mx-1"><a href="#"><img src="assets/img/social/instagram.svg" alt="Instagram"></a></li>
-  <li class="mx-1"><a href="#"><img src="assets/img/social/tiktok.svg" alt="Tiktok"></a></li>
-  <li class="mx-1"><a href="#"><img src="assets/img/social/youtube.svg" alt="Youtube"></a></li>
-  <li class="mx-1"><a href="#"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
+  <li class="mx-1"><a href="https://www.facebook.com/BTS.MEA" target="_blank"><img src="assets/img/social/fb.svg" alt="Facebook"></a></li>
+  <li class="mx-1"><a href="https://www.instagram.com/beatthesweat.mea/" target="_blank"><img src="assets/img/social/instagram.svg" alt="Instagram"></a></li>
+  <li class="mx-1"><a href="https://www.tiktok.com/@beatthesweat.mea" target="_blank"><img src="assets/img/social/tiktok.svg" alt="Tiktok"></a></li>
+  <li class="mx-1"><a href="https://www.youtube.com/@Beatthesweat-MEA" target="_blank"><img src="assets/img/social/youtube.svg" alt="Youtube"></a></li>
+  <li class="mx-1"><a href="https://www.snapchat.com/add/beatthesweatmea" target="_blank"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
 </ul>
         </div>
         <p class="text-white fs-7">© 2023 <a class="text-white text-underline" href="https://www.allerganaesthetics.com/" target="_blank">Allergan Aesthetics</a>. All rights reserved. All trademarks are the property of their respective owners.</p>
